// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`banner > renders correctly with a button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
        >
          <button
            class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_medium__8xt08sf styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
            type="button"
          >
            Button
          </button>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with a link 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
        >
          <a
            class="styles__1pc546m0 styles_prominence_default__1pc546m3 styles_sentiment_primary__1pc546m1 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_0__1pc546me styles__1pc546mn"
            data-variant="standalone"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Link
            <span
              class="styles__1pc546mm"
            >
              <svg
                aria-hidden="true"
                class="styles__1pc546mp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with closable to false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > should render correctly with dark theme 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
          >
            Descritpion
          </p>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
        >
          <a
            class="styles__1pc546m0 styles_prominence_stronger__1pc546m5 styles_sentiment_primary__1pc546m1 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_standalone__1pc546md styles_undefined_compound_2__1pc546mg styles__1pc546mn"
            data-variant="standalone"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            <span
              class="styles__1pc546mm"
            >
              <svg
                aria-hidden="true"
                class="styles__1pc546mp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size medium and variant intro 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_intro__17sbfy3 styles_undefined_compound_1__17sbfy6 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_headingSmall__1do42ls15 style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size medium and variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_medium__17sbfy1 styles_variant_promotional__17sbfy4 styles_undefined_compound_3__17sbfy8 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_medium__17sbfy9 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_white__1do42lsg style_variant_headingSmall__1do42ls15 style_undefined_compound_1__1do42ls1b style_undefined_compound_73__1do42ls3b"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_small__8xt08sg styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size small and variant intro 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_small__17sbfy2 styles_variant_intro__17sbfy3 styles_undefined_compound_0__17sbfy5 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_small__17sbfya styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image-small.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStronger__1do42lso style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size small and variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17sbfy0 styles_size_small__17sbfy2 styles_variant_promotional__17sbfy4 styles_undefined_compound_2__17sbfy7 styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
    >
      <div
        class="styles_small__17sbfya styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_center_xxsmall__xf61n461"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/Banner/assets/default-image-small.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__xf61n40 styles_alignItems_flex-start_xxsmall__xf61n4v styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_space-between_xxsmall__xf61n477"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j styles_justifyContent_center_xxsmall__xf61n461"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_white__1do42lsg style_variant_bodyStronger__1do42lso style_undefined_compound_1__1do42ls1b style_undefined_compound_73__1do42ls3b"
          >
            Title
          </p>
          <p
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__17sbfyb styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_small__8xt08sg styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        name="close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
